--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "start-api": "cd ../backend && venv/bin/flask run -p 8000",
     "lint": "eslint .",
+
     "preview": "vite preview"
   },
   "dependencies": {
@@ -25,5 +27,6 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
     "vite": "^6.0.1"
-  }
+  },
+  "proxy": "http://127.0.0.1:8000"
 }
