--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,10 @@
     "build": "tsc -b && vite build",
     "start-api": "cd ../backend && venv/bin/flask run -p 8000",
     "lint": "eslint .",
-
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^11.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
