--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -11,5 +11,12 @@
             "src": "/(.*)",
             "dest": "app.py"
         }
-    ]
+    ], 
+    "functions": {
+        "backend/api/scraper.py": {
+            "runtime": "@vercel/python",
+            "memory": 1024, 
+            "maxDuration": 60
+        }
+    }
 }
