--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,26 +2,54 @@ attrs==24.2.0
 beautifulsoup4==4.12.3
 blinker==1.9.0
 bs4==0.0.2
+CacheControl==0.14.1
+cachetools==5.5.0
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.4.0
 chromedriver==2.24.1
 click==8.1.7
 cloudscraper==1.2.71
+cryptography==44.0.0
 exceptiongroup==1.2.2
+firebase-admin==6.6.0
+firestore==0.0.8
 Flask==3.1.0
 Flask-Cors==5.0.0
+google-api-core==2.23.0
+google-api-python-client==2.154.0
+google-auth==2.36.0
+google-auth-httplib2==0.2.0
+google-cloud-core==2.4.1
+google-cloud-firestore==2.19.0
+google-cloud-storage==2.18.2
+google-crc32c==1.6.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.66.0
+grpcio==1.68.0
+grpcio-status==1.68.0
 h11==0.14.0
+httplib2==0.22.0
 idna==3.10
 importlib_metadata==8.5.0
+iso8601==2.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==3.0.2
+msgpack==1.1.0
 outcome==1.3.0.post0
+proto-plus==1.25.0
+protobuf==5.29.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
+PyJWT==2.10.1
 pyparsing==3.2.0
 PySocks==1.7.1
 python-dotenv==1.0.1
 requests==2.32.3
 requests-toolbelt==1.0.0
+rsa==4.9
 selenium==4.27.1
 sniffio==1.3.1
 sortedcontainers==2.4.0
@@ -29,6 +57,7 @@ soupsieve==2.6
 trio==0.27.0
 trio-websocket==0.11.1
 typing_extensions==4.12.2
+uritemplate==4.1.1
 urllib3==2.2.3
 websocket-client==1.8.0
 Werkzeug==3.1.3
