--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,13 +7,17 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "start-api": "cd ../backend && venv/bin/flask run -p 8000",
+    "tailwind": "tailwindcss -i ./src/index.css -o ./src/tailwind.css --watch",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "firebase": "^11.0.2",
+    "framer-motion": "^11.12.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
