--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "build": "tsc -b && vite build",
     "start-api": "cd ../backend && venv/bin/flask run -p 8000",
     "tailwind": "tailwindcss -i ./src/index.css -o ./src/tailwind.css --watch",
+    "prettier": "prettier . --write",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -17,6 +18,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-query": "^3.39.3",
+    "react-router-dom": "6",
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
@@ -30,6 +33,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
     "postcss": "^8.4.49",
+    "prettier": "3.4.2",
     "tailwindcss": "^3.4.15",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
